# mongo-to-sql

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
.circleci/: config.yml
mongo-to-sql/: README.md  setup.cfg
mongo-to-sql/mongo_to_sql/databases/: consts.py  exceptions.py  mongo.py  postgres.py  utils.py
mongo-to-sql/mongo_to_sql/process/: __init__.py  import.py  main.py
mongo-to-sql/mongo_to_sql_tests/constants/: mongo.py  postgres.py
mongo-to-sql/mongo_to_sql_tests/databases/: mongo_tests.py  postgres_tests.py
mongo-to-sql/mongo_to_sql_tests/fixtures/: __init__.py  create_env_vars.py
mongo-to-sql/mongo_to_sql_tests/fixtures/databases/: mongo_fixtures.py  postgres_fixtures.py
mongo-to-sql/mongo_to_sql_tests/fixtures/test_mongo_db/: zips.bson
mongo-to-sql/mongo_to_sql_tests/fixtures/testing_mongo/: zips.metadata.json
mongo-to-sql/mongo_to_sql_tests/process/: process_tests.py
wheels/: mongo_to_sql-0.0.1-py2.py3-none-any.whl
