[metadata]
name = mongo-to-sql-project
version = 0.0.1

[options]
packages =
    mongo-to-sql

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*,venv*,local_settings*,trees_tests,management,node_modules,wsgi*
max-line-length = 120
max-complexity = 19

[isort]
atomic=true
combine_as_imports=false
indent=4
known_standard_library=token,tokenize,enum,importlib
known_third_party=django
length_sort=false
line_length=120
multi_line_output=5
order_by_type=false
skip=migrations,node_modules,conftest.py,wsgi.py,venv
wrap_length=120

[prequ]
annotate = yes
wheel_dir = wheels

wheel_sources =
    local = ./{pkg}

requirements =
    django-environ==0.4.5
    mongo-to-sql==0.0.1 (wheel from local)
    psycopg2-binary==2.8.5
    pymongo==3.11.2

requirements-dev =
    wheel
    prequ
    autoflake==1.4
    -e mongo-to-sql

requirements-test =
    coverage==5.3
    flake8==3.8.4
    isort==5.7.0
    pytest-cov==2.10.1
    pytest==6.2.0
    lorem-text==1.5


[tool:pytest] 
python_files = *_tests.py **/*_tests.py, **/**/*_tests.py
testpaths = ./mongo-to-sql/mongo_to_sql_tests


[coverage:run]
branch = True
source = mongo_to_sql
data_file=./.coverage
omit =
    */__init__.py,
    *manage.py,
    *settings*.py,
    *urls.py,
    *admin.py,
    *migrations/*,
    *wsgi.py,
    *conftest.py,
    */extra*
    project/asgi.py
    project/aws.py
    mongo-to-sql/setup.py
    mongo-to-sql/mongo_to_sql_tests
    setup.py

[coverage:report]
#fail_under = 90
show_missing = True


